...
            </View>
          ))}
        </View>
      </Animated.View>
      <TextInput
        ref={input}
        testID="otp-input"
        accessibilityLabel={label}
        value={value}
        editable={!disabled}
        autoFocus={autoFocus && !disabled}
        keyboardType="number-pad"
        textContentType="oneTimeCode"
...
